--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
 	"Hello": "Hello",
 	"PageNotFound": "PageNotFound",
 	"Refresh_page": "Обновить",
-	"RefreshPageTitle": "Непридвиденная ошибка"
+	"RefreshPageTitle": "Непридвиденная ошибка",
+	"about": "About",
+	"main": "Main"
 }
