--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
 	"Hello": "Привет",
 	"PageNotFound": "PageNotFound",
   	"Refresh_page": "Обновить",
-	"RefreshPageTitle": "Непридвиденная ошибка"
+	"RefreshPageTitle": "Непридвиденная ошибка",
+	"about": "О Сайте",
+	"main": "Главная"
 }
