--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,6 +3,7 @@
 	"Hello": "Привет",
 	"PageNotFound": "PageNotFound",
   	"Refresh_page": "Обновить",
+	"Short_Language" : "Ru",
 	"RefreshPageTitle": "Непридвиденная ошибка",
 	"about": "О Сайте",
 	"main": "Главная"
